Prevent horizontal scrolling on index

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -75,3 +75,8 @@
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
+
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
